# ufiles-api

./: .gitignore  docker-compose.prod.yml  docker-compose.yml  sample.env
app/: .dockerignore  Dockerfile  alembic.ini  app.py  main.py  pyproject.toml  pytest.ini  requirements.txt  requirements2.txt  test.db  test.txt
app/alembic/: env.py
app/alembic/versions/: 8d4fe113ecbd_init.py  b3282ae1c90e_init.py
app/apps/applications/: applications.py  handlers.py  image.py  models.py  routes.py  schemas.py
app/apps/base/: handlers.py  models.py  routes.py  schemas.py  tasks.py
app/apps/business/: handlers.py  middlewares.py  models.py  routes.py  schemas.py
app/apps/files/: encryption_service.py  file_manager.py  file_validator.py  filestorage.py  imagetools.py  models.py  routes.py  schemas.py  services.py  statics.py  worker.py
app/apps/files/storage/: __init__.py  base_storage.py  local_storage.py  nextcloud_storage.py  s3_storage.py
app/apps/s3/: routes.py  services.py
app/server/: config.py  db.py  server.py  worker.py
app/tests/: README.md  conftest.py  test_config.py  test_file_manager.py  test_integration.py  test_models.py
app/tests/storage/: conftest.py  test_local_storage.py  test_next_cloud.py  test_s3_storage.py  test_storage.py
app/utils/: aionetwork.py  imagetools.py
